refactor: Rename and generate spec
